# time-machine

./: .drone.yml  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  Dockerfile.dev  Dockerfile.prod  Journal.md  Procfile  README.md  Taskfile.prod.yml  Taskfile.yml  cloudbuild.yaml  dev.Dockerfile  docker-compose.prod.yml  docker-compose.yml  docker-entrypoint.dev.sh  docker-entrypoint.sh  gunicorn.conf.py  manage.py  migrate.Dockerfile  mise.toml  package-lock.json  package.json  pg.Dockerfile  prod.Dockerfile  pyproject.toml  requirements.txt
.gitea/workflows/: build-and-push.yaml  build.yaml
.github/workflows/: build-and-push.yaml
api/: .air.toml  admin.py  dev.Dockerfile  go.mod  go.sum  main.go  sqlc.yaml  urls.py
api/auth/: __init__.py  decode.py  username_handler.py
api/cognito/: __init__.py  cognito.py  utils.py
api/config/: config.go
api/database/: database.go
api/docs/: docs.go  swagger.json  swagger.yaml
api/handlers/: checkin.go  tag.go  textLog.go
api/handlers/checkin/: checkin.go
api/handlers/tag/: tag.go
api/handlers/textLog/: textLog.go
api/internal/formatters/: pagedResponse.go
api/internal/parsers/: date.go  page.go
api/internal/sql/: checkin.sql.go  models.go
api/internal/validation/: validation.go
api/migrations/: 000001_create_checkin_table.down.sql  000001_create_checkin_table.up.sql  000002_expand_id_length.down.sql  000002_expand_id_length.up.sql  0001_initial.py  0002_alter_cognitouser_options.py  0002_checkin_record_date.py  0003_alter_checkin_options.py
api/models/: __init__.py  check_in.py  checkin.go  cognito_user.py  textLog.go  utils.py
api/permissions/: is_admin.py
api/schemas/: __init__.py  aws_error.py  cognito_user.py
api/scripts/batch_load_checkins/: __main__.py  data.json
api/serializers/: __init__.py  check_in.py  cognito_user.py  user.py
api/sql/: checkin.sql
api/tasks/: startup.py
api/templates/api/: swagger-ui.html
api/types/: __init__.py  request.py
api/views/: __init__.py  auth.py  check_in.py  cognito_user.py  health.py
backend/: admin.py  models.py  serializers.py  tests.py  urls.py  utils.py  views.py
backend/migrations/: 0001_initial.py  0002_delete_checkin.py  0003_checkin.py
deploy/dev/: docker-compose.yml
deploy/dev/proxy/: nginx.conf
deploy/helm/time-machine/: values.yaml
deploy/lab/: Jenkinsfile  docker-compose.yml
deploy/lab/proxy/: nginx.conf
deploy/prod/: docker-compose.yml
deploy/prod/proxy/: nginx.conf
frontend/: urls.py
frontend/jinja2/frontend/: index.html.j2  robots.txt
infra/: application.yaml
infra/argocd/: application.yaml
infra/helm/: pg-values.yaml
proxy/: nginx.conf
proxy/dev/: nginx.conf
scripts/: .env.mako  get_secret_string.py  make_dotenv.py  make_dotenvrc.py
time_machine/: asgi.py  settings.py  urls.py  utils.py  wsgi.py
time_machine/aws/: client.py
timemachine/: asgi.py  settings.py  urls.py  wsgi.py
ui/: .prettierrc.cjs  biome.json  bun.lockb  components.json  index.html  package-lock.json  package.json  tailwind.config.cjs  tsconfig.json  vite.config.ts
ui/src/: App.tsx  index.css  main.tsx  store.ts
web/app/: Dockerfile  package.json
(+63 files in other folders)
