[tool.poetry]
name = "time-machine"
version = "0.1.0"
description = ""
authors = ["Kenneth V. Domingo <hello@kvdomingo.xyz>"]

[tool.poetry.dependencies]
python = "^3.10"
Django = "<4.1"
djangorestframework = "^3.13.1"
django-cors-headers = "^3.13.0"
python-dotenv = "^0.20.0"
gunicorn = {extras = ["gevent"], version = "^20.1.0"}
whitenoise = "^6.1.0"
dj-database-url = "^1.0.0"
boto3 = "^1.24.51"
requests = "^2.28.1"
django-filter = "^22.1"
PyYAML = "^6.0"
uritemplate = "^4.1.1"
pydantic = {extras = ["email"], version = "^1.9.2"}
loguru = "^0.6.0"
drf-jwt = "^1.19.2"
psycopg2-binary = "^2.9.5"

[tool.poetry.group.dev.dependencies]
black = "^22.6.0"
isort = "^5.10.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
target-version = ['py310']
line-length = 120
