[tool.poetry]
name = "time-machine"
version = "0.1.0"
description = ""
authors = ["Kenneth V. Domingo <hello@kvdomingo.xyz>"]

[tool.poetry.dependencies]
python = "^3.10"
Django = "^4.2.3"
djangorestframework = "^3.13.1"
django-cors-headers = "^4.2.0"
python-dotenv = "^1.0.0"
gunicorn = {extras = ["gevent"], version = "^20.1.0"}
whitenoise = "^6.5.0"
dj-database-url = "^2.0.0"
boto3 = "^1.28.3"
requests = "^2.31.0"
django-filter = "^23.2"
PyYAML = "^6.0"
uritemplate = "^4.1.1"
pydantic = {extras = ["email"], version = "^2.0.3"}
loguru = "^0.7.0"
drf-jwt = "^1.19.2"
psycopg2-binary = "^2.9.6"

[tool.poetry.group.dev.dependencies]
black = "^22.6.0"
isort = "^5.10.1"
google-cloud-secret-manager = "^2.15.0"
mako = "^1.2.4"
flake8 = "^6.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
target-version = ["py310"]
